--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.data.mongodb.uri=mongodb+srv://mohammedvsroshan:7l3umGANWXdtbbmI@Cluster0.egedcow.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://mohammedvsroshan:xx@Cluster0.egedcow.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=l-m-s
 server.port=8082
 logging.level.org.mongodb.driver=DEBUG
