--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 
-spring.data.mongodb.uri=mongodb+srv://mohammedvsroshan:xx@Cluster0.egedcow.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=l-m-s
+mongodb.uri=mongodb+srv://mohammedvsroshan:xyc@Cluster0.egedcow.mongodb.net/?retryWrites=true&w=majority
+mongodb.database=l-m-s
+
+
 server.port=8082
 logging.level.org.mongodb.driver=DEBUG
+
+
+
+newsletter.datasource.jdbc-url=jdbc:mysql://localhost:3306/sakila?createDatabaseIfNotExist=true
+newsletter.datasource.password=xyc
+newsletter.datasource.username=root
