changes for the mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-mongodb.uri=mongodb+srv://mohammedvsroshan:xyc@Cluster0.egedcow.mongodb.net/?retryWrites=true&w=majority
+mongodb.uri=mongodb+srv://mohammedvsroshan: @Cluster0.egedcow.mongodb.net/?retryWrites=true&w=majority
 mongodb.database=l-m-s
 
 
@@ -9,5 +9,5 @@ logging.level.org.mongodb.driver=DEBUG
 
 
 newsletter.datasource.jdbc-url=jdbc:mysql://localhost:3306/sakila?createDatabaseIfNotExist=true
-newsletter.datasource.password=xyc
+newsletter.datasource.password=
 newsletter.datasource.username=root
